[package]
name = "cubic-protocol-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "2.1.0"
log = "0.4.17"
cubic-protocol = { path = "./../cubic-protocol", features = ["server", "p1_18_2"] }
cubic-chat = "0.1.1"
uuid = "1.1.0"
tokio = { version = "1.18.2", features = ["full"] }